workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/CondicaoCobranca__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as condições de cobrança dos produtos</description>
    <label>Condição de cobrança</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condições de cobrança</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>