workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/fields/AntecipacaoComissao__c.field-meta.xml
<CustomField>
    <fullName>AntecipacaoComissao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antecipação de Comissão</label>
    <type>Checkbox</type>
</CustomField>