workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/fields/LimiteValorParcela__c.field-meta.xml
<CustomField>
    <fullName>LimiteValorParcela__c</fullName>
    <description>Define o limite do  valor da parcela  do prêmio para uso desta forma de pagamento</description>
    <label>Limite do valor da parcela</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.00-100.00</fullName>
                <default>true</default>
                <label>de R$ 1,00 a R$ 100,00</label>
            </value>
            <value>
                <fullName>1000.01-10000.00</fullName>
                <label>de R$ 1.000,01 a R$ 10.000,00</label>
            </value>
            <value>
                <fullName>100.01-1000.00</fullName>
                <label>de R$ 100,01 a R$ 1.000,00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>