workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/fields/NomeFormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>NomeFormaPagamento__c</fullName>
    <description>campo utilizado para exibição do nome da forma de pagamento</description>
    <label>Nome Forma Pagamento</label>
    <type>TextArea</type>
</CustomField>