workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/fields/PercentualDescontoAgravo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoAgravo__c</fullName>
    <description>Este campo deverá conter valores percentuais de desconto ou agravo. Valor negativo, se for desconto e positivo, se for agravo.</description>
    <inlineHelpText>Este campo deverá conter valores percentuais de desconto ou agravo. Valor negativo, se for desconto e positivo, se for agravo.</inlineHelpText>
    <label>Percentual de Desconto ou Agravo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>