workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/fields/PercentualMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualMaximo__c</fullName>
    <label>Percentual máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>