workspace-sf/force-app/main/default/objects/CondicaoCobranca__c/fields/TipoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoPagamento__c</fullName>
    <description>O Valor selecionado neste campo será enviado para o Portal identificando o formulário de pagamento que deverá ser exibido.</description>
    <inlineHelpText>Identifica o leiaute que será exibido na tela dos portais.</inlineHelpText>
    <label>Tipo pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>CartaoCredito</fullName>
                <label>Cartão de crédito</label>
            </value>
            <value>
                <fullName>CartaoRecorrente</fullName>
                <isActive>false</isActive>
                <label>Cartão Recorrente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>